--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ textArea{
     height: 400px;
     border-radius: 5%;
     font-size: 160%;
+    
 }
 
 
@@ -66,6 +67,7 @@ textArea{
     width: 30%;
     height: 520px;
     border-radius: 10%;
+    padding-left: 20px
     ;
 
 }
@@ -107,5 +109,21 @@ textArea{
 
 .ocultar{
     display: none;
+}
+
+.copyButton{
+    position: fixed;
+    padding-top: 460px;
+    padding-left: 140px;
+}
+
+.buttonCopy{
+    background-color:white ;
+    color: blue;
+    width: 100px;
+    height: 30px;
+    border-radius: 20px;
+    cursor: pointer;
+    
 }
 
